Added PDF Metadata.

--- a/report/root.tex
+++ b/report/root.tex
@@ -20,6 +20,26 @@
 \usepackage{tikz}
 \usetikzlibrary{arrows,decorations,positioning,fit}
 
+%%%%%%%%%%%%% PDF Stuff
+\hypersetup{
+  pdfauthor = {Rollen S. D'Souza},
+  pdftitle = {On Detection of Users and Content of Interest on Reddit},
+  pdfdisplaydoctitle = {true},
+  unicode = {true},
+  pdfsubject = {Social Network Science},
+  pdfkeywords = {network science, reddit},
+  pdfcreator = {\LaTeX with \flqq hyperref \flqq package},
+  pdfproducer = {dvips + ps2pdf},
+  pdfstartview={FitV},
+  colorlinks = true,
+  linkcolor = blue,
+  anchorcolor = red,
+  citecolor = red,
+  filecolor = blue,
+  urlcolor = red
+}
+%%%%%%%%%%%%
+
 \IEEEoverridecommandlockouts
 \overrideIEEEmargins
 \pdfcompresslevel=9
@@ -154,14 +174,14 @@ Two models are used for analysis. The first models how influential content or us
       & \node (comment_2) [post] {$P_3$}; & &\node (user_b) [user] {$U_b$};\\
     };
 
-    \path (post_a) edge[<-, blue, very thick] (comment_1)
-          (comment_1) edge[<-, blue, very thick] (comment_2);
+    \path (post_a) edge[->, blue, very thick] (comment_1)
+          (comment_1) edge[->, blue, very thick] (comment_2);
 
-    \path (post_a) edge[<-, dashed, very thick] (user_a);
-    \path (user_b) edge[<-, dashed, very thick] (post_a)
-          (user_b) edge[->, dashed, very thick] (comment_1);
-    \path (user_a) edge[<-, dashed, very thick] (comment_1)
-          (user_a) edge[->, dashed, very thick] (comment_2);
+    \path (post_a) edge[->, dashed, very thick] (user_a);
+    \path (user_b) edge[->, dashed, very thick] (post_a)
+          (user_b) edge[<-, dashed, very thick] (comment_1);
+    \path (user_a) edge[->, dashed, very thick] (comment_1)
+          (user_a) edge[<-, dashed, very thick] (comment_2);
 
     \path (user_a) edge[<-, red, very thick] (user_b)
           (user_a) edge[->, red, very thick] (user_b);
